--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.3.1",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "msw": "^1.2.3"
   }
 }
