--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "concurrently": "^6.2.1",
     "json-server": "^0.16.3",
-    "msw": "^1.2.3"
+    "msw": "^1.2.3",
+    "prettier": "^3.0.1"
   }
 }
