--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "json-server": "json-server --watch json-server/db.json --port 3001",
@@ -51,6 +52,10 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "concurrently": "^6.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "json-server": "^0.16.3",
     "msw": "^1.2.3",
     "prettier": "^3.0.1"
