--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -29,7 +32,6 @@
     "lint:style": "eslint src/ && stylelint \"src/**/*.scss\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server --watch json-server/db.json --port 3001",
     "dev": "concurrently -k \"npm run json-server\" \"npm start\""
   },
   "eslintConfig": {
